--- a/BoostPanel/MVVM/View/WingmanView.xaml
+++ b/BoostPanel/MVVM/View/WingmanView.xaml
@@ -41,7 +41,9 @@
                            TextAlignment="Center"
                            FontSize="15"/>
 
-                <TextBox Height="25"
+                <TextBox 
+                    Text="login"
+                    Height="25"
                          Width="125"
                          VerticalContentAlignment="Center"
                          HorizontalAlignment="Left"
@@ -51,6 +53,7 @@
                          Style="{StaticResource TextBoxTheme}"
                         />
                 <TextBox Height="25"
+                         Text="password"
                          Width="125"
                          VerticalContentAlignment="Center"
                          HorizontalAlignment="Right"
@@ -58,7 +61,9 @@
                          Grid.Column="0"
                          Grid.Row="1"
                          Style="{StaticResource TextBoxTheme}"/>
-                <TextBox Height="25"
+                <TextBox 
+                    Text="login"
+                    Height="25"
                          Width="125"
                          VerticalContentAlignment="Center"
                          HorizontalAlignment="Left"
@@ -67,6 +72,7 @@
                          Grid.Row="1"
                          Style="{StaticResource TextBoxTheme}"/>
                 <TextBox Height="25"
+                         Text="password"
                          Width="125"
                          VerticalContentAlignment="Center"
                          HorizontalAlignment="right"
@@ -75,6 +81,7 @@
                          Grid.Row="1"
                          Style="{StaticResource TextBoxTheme}"/>
                 <TextBox Height="25"
+                         Text="login"
                          Width="125"
                          VerticalContentAlignment="Center"
                          HorizontalAlignment="Left"
@@ -85,6 +92,8 @@
                         />
                 <TextBox Height="25"
                          Width="125"
+                         Text="password"
+
                          VerticalContentAlignment="Center"
                          HorizontalAlignment="Right"
                          Margin="5,5,50,5"
@@ -92,6 +101,7 @@
                          Grid.Row="2"
                          Style="{StaticResource TextBoxTheme}"/>
                 <TextBox Height="25"
+                         Text="login"
                          Width="125"
                          VerticalContentAlignment="Center"
                          HorizontalAlignment="Left"
@@ -101,6 +111,7 @@
                          Style="{StaticResource TextBoxTheme}"/>
                 <TextBox Height="25"
                          Width="125"
+                         Text="password"    
                          VerticalContentAlignment="Center"
                          HorizontalAlignment="right"
                          Margin="5,5,50,5"
